# todo-starlette-

./: .env  app.py  database.py  example.db  middleware.py  pyproject.toml
migrations/: env.py
migrations/versions/: 56e5a0d915a5_create_users_table.py
starlette/: .env  .pre-commit-config.yaml  README.md  app.py  database.py  middleware.py  pyproject.toml  resources.py  routes.py
starlette/auth/: middleware.py
starlette/migrations/versions/: 411f808ca6d4_create_users_table.py  56e5a0d915a5_create_users_table.py  efa3ba90f84a_create_todo_table.py
starlette/todo/: models.py  mutations.py  queries.py  routes.py  schema.py
starlette/userapp/: models.py  mutations.py  queries.py  routes.py  schemas.py  views.py
userapp/: models.py  routes.py  schemas.py  views.py
