[tool.poetry]
name = "test"
version = "0.1.0"
description = ""
authors = ["Prabin Karki <prabin0karki@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
uvicorn = "^0.13.3"
databases = "^0.4.1"
httpx = "^0.16.1"
aiofiles = "^0.6.0"
aiosqlite = "^0.16.0"
alembic = "^1.4.3"
python-dotenv = "^0.15.0"
ariadne = "^0.12.0"

[tool.poetry.dev-dependencies]
pylint = "^2.6.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
